# hr-labor-law-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  docker-entrypoint.sh  gunicorn.conf.py  pyproject.toml  requirements.txt  server.py  setup.sh
.claude/: launch.json
eval/: evaluation.py
scripts/: build_index.py  download_laws.py  preload_model.py  process_books.py
src/: config.py  guardrail.py  rag_engine.py  router.py
static/: architecture.drawio  index.html
