[project]
name = "hr-labor-law-rag"
version = "0.1.0"
description = "RAG-based Taiwan labor-law query system for HR"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "anthropic>=0.40.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=3.0.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.10.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = ["ruff>=0.6.0"]

[tool.ruff]
target-version = "py311"
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# sys.path shim must run before importing the src package
"scripts/*" = ["E402"]
"eval/*" = ["E402"]
